2003-03-03 Craig Franklin <craigfranklin@attbi.com>
  * Finished relocation patching.
  * Added map and hex file outputs to gplink.

2003-02-27 Craig Franklin <craigfranklin@attbi.com>
  * Added relocation and linking functions to gplink.

2003-02-22 Craig Franklin <craigfranklin@attbi.com>
  * Removed nuisance warning about malformed asm files.
  * Fixed errors when using escape characters in strings.

2003-02-17 Craig Franklin <craigfranklin@attbi.com>
  * Added auxilary coff symbols.

2003-02-16 Craig Franklin <craigfranklin@attbi.com>
  * Added pointers in object files to simplify linking operations.
  * Added checks when reading object files.

2003-02-02 Craig Franklin <craigfranklin@attbi.com>
  * Combined overlayed sections in gpasm coff outputs.
  * Append prefix on local variables that end up in coff file.  
  * Fixed error that prevented using $ with data directives.

2003-01-19 Craig Franklin <craigfranklin@attbi.com>
  * Added object test files.
  * Fixed errors found by running new test files.  
  * Added bankisel directive.

2003-01-05 Craig Franklin <craigfranklin@attbi.com>
  * Converted to new object structures.
  * Fixed errors in gpasm, gplib, and gplink.  
  * Changed gpvo output format.

2002-12-22 Craig Franklin <craigfranklin@attbi.com>
  * Added coff file support to gpasm.
  * Added UPPER operator.
  * Removed invalid parts. 

2002-12-04 Craig Franklin <craigfranklin@attbi.com>
  * Fixed incorrect range warning on 18xx gotos.
  * Fixed parse error for << operators > in the comment.
  * Cleaned up parse debug output.

2002-11-22 Craig Franklin <craigfranklin@attbi.com>
  * gputils 0.10.6 Released.
  * Fixed behavior of de directive for 18xxx devices. Data is now packed.
  * Added new directives: banksel and pagesel
  * Fixed default BSR behavior for 18xxx devices.
  * Changed gpasm default hex file format to inhx32.

2002-11-09 Scott Dattalo <scott@dattalo.com>
  * Invalid relative branches for 18xxx family were not generating errors. 